Fixed design responsive and text-overflow on Services section

--- a/src/app/pages/services/services.component.css
+++ b/src/app/pages/services/services.component.css
@@ -1,3 +1,13 @@
 img {
     border-radius: 10px;
 }
+
+.serviceImg {
+    min-width: 320px;
+    max-width: 50%;
+}
+
+.serviceText {
+    word-wrap: break-word;
+    padding: 0 15px;
+}
